# ydr_text_service

./: .env  .gitignore  .pdm.toml  Dockerfile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 8e7486db2444_init.py  a7ce83df27b6_image.py
src/: settings.py
src/application/: get_article.py  get_articles_list.py
src/domain/: entities.py
src/infrastructure/commands/: init_db.py  main.py
src/infrastructure/data/: mappers.py  repository.py
src/infrastructure/server/: main.py  workspace.code-workspace
